Compilers. Principles, Techniques, and Tools/minidecaf/frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program_component -> function
Rule 2     program_component -> declaration Semi
Rule 3     program_component -> program_component program_component
Rule 4     empty -> <empty>
Rule 5     program -> program_component
Rule 6     type -> Int
Rule 7     function -> type Identifier LParen Parameter RParen LBrace block RBrace
Rule 8     block -> block block_item
Rule 9     block -> empty
Rule 10    block_item -> statement
Rule 11    block_item -> declaration Semi
Rule 12    statement -> statement_matched
Rule 13    statement -> statement_unmatched
Rule 14    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 15    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 16    statement_unmatched -> If LParen expression RParen statement
Rule 17    statement_matched -> While LParen expression RParen statement_matched
Rule 18    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 19    statement_matched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 20    statement_matched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 21    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 22    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 23    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 24    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 25    statement_matched -> Return expression Semi
Rule 26    statement_matched -> opt_expression Semi
Rule 27    statement_matched -> LBrace block RBrace
Rule 28    statement_matched -> Break Semi
Rule 29    statement_matched -> Continue Semi
Rule 30    opt_expression -> expression
Rule 31    opt_expression -> empty
Rule 32    declaration -> type Identifier
Rule 33    declaration -> type Identifier Assign expression
Rule 34    arr_dim_list -> LBracket Integer RBracket arr_dim_list
Rule 35    arr_dim_list -> LBracket Integer RBracket
Rule 36    declaration -> type Identifier arr_dim_list
Rule 37    postfix -> Identifier LParen call_para RParen
Rule 38    call_para -> expression
Rule 39    call_para -> empty
Rule 40    call_para -> call_para Comma call_para
Rule 41    Parameter -> type Identifier
Rule 42    Parameter -> Parameter Comma Parameter
Rule 43    Parameter -> empty
Rule 44    expression -> assignment
Rule 45    assignment -> conditional
Rule 46    conditional -> logical_or
Rule 47    logical_or -> logical_and
Rule 48    logical_and -> bit_or
Rule 49    bit_or -> xor
Rule 50    xor -> bit_and
Rule 51    bit_and -> equality
Rule 52    equality -> relational
Rule 53    relational -> additive
Rule 54    additive -> multiplicative
Rule 55    multiplicative -> unary
Rule 56    unary -> postfix
Rule 57    postfix -> primary
Rule 58    unary -> Minus unary
Rule 59    unary -> BitNot unary
Rule 60    unary -> Not unary
Rule 61    arr_idx_list -> LBracket expression RBracket arr_idx_list
Rule 62    arr_idx_list -> LBracket expression RBracket
Rule 63    arr_ref -> Identifier arr_idx_list
Rule 64    assignment -> Identifier Assign expression
Rule 65    assignment -> arr_ref Assign expression
Rule 66    logical_or -> logical_or Or logical_and
Rule 67    logical_and -> logical_and And bit_or
Rule 68    bit_or -> bit_or BitOr xor
Rule 69    xor -> xor Xor bit_and
Rule 70    bit_and -> bit_and BitAnd equality
Rule 71    equality -> equality NotEqual relational
Rule 72    equality -> equality Equal relational
Rule 73    relational -> relational Less additive
Rule 74    relational -> relational Greater additive
Rule 75    relational -> relational LessEqual additive
Rule 76    relational -> relational GreaterEqual additive
Rule 77    additive -> additive Plus multiplicative
Rule 78    additive -> additive Minus multiplicative
Rule 79    multiplicative -> multiplicative Mul unary
Rule 80    multiplicative -> multiplicative Div unary
Rule 81    multiplicative -> multiplicative Mod unary
Rule 82    conditional -> logical_or Question expression Colon conditional
Rule 83    primary -> Integer
Rule 84    primary -> Identifier
Rule 85    primary -> LParen expression RParen
Rule 86    primary -> arr_ref

Terminals, with rules where they appear

And                  : 67
Assign               : 33 64 65
BitAnd               : 70
BitNot               : 59
BitOr                : 68
Break                : 28
Colon                : 82
Comma                : 40 42
Continue             : 29
Div                  : 80
Do                   : 23 24
Else                 : 14 15
Equal                : 72
For                  : 19 20 21 22
Greater              : 74
GreaterEqual         : 76
Identifier           : 7 32 33 36 37 41 63 64 84
If                   : 14 15 16
Int                  : 6
Integer              : 34 35 83
LBrace               : 7 27
LBracket             : 34 35 61 62
LParen               : 7 14 15 16 17 18 19 20 21 22 23 24 37 85
Less                 : 73
LessEqual            : 75
Minus                : 58 78
Mod                  : 81
Mul                  : 79
Not                  : 60
NotEqual             : 71
Or                   : 66
Plus                 : 77
Question             : 82
RBrace               : 7 27
RBracket             : 34 35 61 62
RParen               : 7 14 15 16 17 18 19 20 21 22 23 24 37 85
Return               : 25
Semi                 : 2 11 19 19 20 20 21 21 22 22 23 24 25 26 28 29
While                : 17 18 23 24
Xor                  : 69
error                : 

Nonterminals, with rules where they appear

Parameter            : 7 42 42
additive             : 53 73 74 75 76 77 78
arr_dim_list         : 34 36
arr_idx_list         : 61 63
arr_ref              : 65 86
assignment           : 44
bit_and              : 50 69 70
bit_or               : 48 67 68
block                : 7 8 27
block_item           : 8
call_para            : 37 40 40
conditional          : 45 82
declaration          : 2 11 20 22
empty                : 9 31 39 43
equality             : 51 70 71 72
expression           : 14 15 16 17 18 23 24 25 30 33 38 61 62 64 65 82 85
function             : 1
logical_and          : 47 66 67
logical_or           : 46 66 82
multiplicative       : 54 77 78 79 80 81
opt_expression       : 19 19 19 20 20 21 21 21 22 22 26
postfix              : 56
primary              : 57
program              : 0
program_component    : 3 3 5
relational           : 52 71 72 73 74 75 76
statement            : 10 16
statement_matched    : 12 14 14 15 17 19 20 23
statement_unmatched  : 13 15 18 21 22 24
type                 : 7 32 33 36 41
unary                : 55 58 59 60 79 80 81
xor                  : 49 68 69

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . program_component
    (1) program_component -> . function
    (2) program_component -> . declaration Semi
    (3) program_component -> . program_component program_component
    (7) function -> . type Identifier LParen Parameter RParen LBrace block RBrace
    (32) declaration -> . type Identifier
    (33) declaration -> . type Identifier Assign expression
    (36) declaration -> . type Identifier arr_dim_list
    (6) type -> . Int

    Int             shift and go to state 6

    program                        shift and go to state 1
    program_component              shift and go to state 2
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (5) program -> program_component .
    (3) program_component -> program_component . program_component
    (1) program_component -> . function
    (2) program_component -> . declaration Semi
    (3) program_component -> . program_component program_component
    (7) function -> . type Identifier LParen Parameter RParen LBrace block RBrace
    (32) declaration -> . type Identifier
    (33) declaration -> . type Identifier Assign expression
    (36) declaration -> . type Identifier arr_dim_list
    (6) type -> . Int

    $end            reduce using rule 5 (program -> program_component .)
    Int             shift and go to state 6

    program_component              shift and go to state 7
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 3

    (1) program_component -> function .

    Int             reduce using rule 1 (program_component -> function .)
    $end            reduce using rule 1 (program_component -> function .)


state 4

    (2) program_component -> declaration . Semi

    Semi            shift and go to state 8


state 5

    (7) function -> type . Identifier LParen Parameter RParen LBrace block RBrace
    (32) declaration -> type . Identifier
    (33) declaration -> type . Identifier Assign expression
    (36) declaration -> type . Identifier arr_dim_list

    Identifier      shift and go to state 9


state 6

    (6) type -> Int .

    Identifier      reduce using rule 6 (type -> Int .)


state 7

    (3) program_component -> program_component program_component .
    (3) program_component -> program_component . program_component
    (1) program_component -> . function
    (2) program_component -> . declaration Semi
    (3) program_component -> . program_component program_component
    (7) function -> . type Identifier LParen Parameter RParen LBrace block RBrace
    (32) declaration -> . type Identifier
    (33) declaration -> . type Identifier Assign expression
    (36) declaration -> . type Identifier arr_dim_list
    (6) type -> . Int

  ! shift/reduce conflict for Int resolved as shift
    $end            reduce using rule 3 (program_component -> program_component program_component .)
    Int             shift and go to state 6

  ! Int             [ reduce using rule 3 (program_component -> program_component program_component .) ]

    program_component              shift and go to state 7
    function                       shift and go to state 3
    declaration                    shift and go to state 4
    type                           shift and go to state 5

state 8

    (2) program_component -> declaration Semi .

    Int             reduce using rule 2 (program_component -> declaration Semi .)
    $end            reduce using rule 2 (program_component -> declaration Semi .)


state 9

    (7) function -> type Identifier . LParen Parameter RParen LBrace block RBrace
    (32) declaration -> type Identifier .
    (33) declaration -> type Identifier . Assign expression
    (36) declaration -> type Identifier . arr_dim_list
    (34) arr_dim_list -> . LBracket Integer RBracket arr_dim_list
    (35) arr_dim_list -> . LBracket Integer RBracket

    LParen          shift and go to state 10
    Semi            reduce using rule 32 (declaration -> type Identifier .)
    Assign          shift and go to state 11
    LBracket        shift and go to state 13

    arr_dim_list                   shift and go to state 12

state 10

    (7) function -> type Identifier LParen . Parameter RParen LBrace block RBrace
    (41) Parameter -> . type Identifier
    (42) Parameter -> . Parameter Comma Parameter
    (43) Parameter -> . empty
    (6) type -> . Int
    (4) empty -> .

    Int             shift and go to state 6
    RParen          reduce using rule 4 (empty -> .)
    Comma           reduce using rule 4 (empty -> .)

    type                           shift and go to state 14
    Parameter                      shift and go to state 15
    empty                          shift and go to state 16

state 11

    (33) declaration -> type Identifier Assign . expression
    (44) expression -> . assignment
    (45) assignment -> . conditional
    (64) assignment -> . Identifier Assign expression
    (65) assignment -> . arr_ref Assign expression
    (46) conditional -> . logical_or
    (82) conditional -> . logical_or Question expression Colon conditional
    (63) arr_ref -> . Identifier arr_idx_list
    (47) logical_or -> . logical_and
    (66) logical_or -> . logical_or Or logical_and
    (48) logical_and -> . bit_or
    (67) logical_and -> . logical_and And bit_or
    (49) bit_or -> . xor
    (68) bit_or -> . bit_or BitOr xor
    (50) xor -> . bit_and
    (69) xor -> . xor Xor bit_and
    (51) bit_and -> . equality
    (70) bit_and -> . bit_and BitAnd equality
    (52) equality -> . relational
    (71) equality -> . equality NotEqual relational
    (72) equality -> . equality Equal relational
    (53) relational -> . additive
    (73) relational -> . relational Less additive
    (74) relational -> . relational Greater additive
    (75) relational -> . relational LessEqual additive
    (76) relational -> . relational GreaterEqual additive
    (54) additive -> . multiplicative
    (77) additive -> . additive Plus multiplicative
    (78) additive -> . additive Minus multiplicative
    (55) multiplicative -> . unary
    (79) multiplicative -> . multiplicative Mul unary
    (80) multiplicative -> . multiplicative Div unary
    (81) multiplicative -> . multiplicative Mod unary
    (56) unary -> . postfix
    (58) unary -> . Minus unary
    (59) unary -> . BitNot unary
    (60) unary -> . Not unary
    (37) postfix -> . Identifier LParen call_para RParen
    (57) postfix -> . primary
    (83) primary -> . Integer
    (84) primary -> . Identifier
    (85) primary -> . LParen expression RParen
    (86) primary -> . arr_ref

    Identifier      shift and go to state 17
    Minus           shift and go to state 31
    BitNot          shift and go to state 34
    Not             shift and go to state 35
    Integer         shift and go to state 38
    LParen          shift and go to state 36

    expression                     shift and go to state 18
    assignment                     shift and go to state 19
    conditional                    shift and go to state 20
    arr_ref                        shift and go to state 21
    logical_or                     shift and go to state 22
    logical_and                    shift and go to state 23
    bit_or                         shift and go to state 24
    xor                            shift and go to state 25
    bit_and                        shift and go to state 26
    equality                       shift and go to state 27
    relational                     shift and go to state 28
    additive                       shift and go to state 29
    multiplicative                 shift and go to state 30
    unary                          shift and go to state 32
    postfix                        shift and go to state 33
    primary                        shift and go to state 37

state 12

    (36) declaration -> type Identifier arr_dim_list .

    Semi            reduce using rule 36 (declaration -> type Identifier arr_dim_list .)


state 13

    (34) arr_dim_list -> LBracket . Integer RBracket arr_dim_list
    (35) arr_dim_list -> LBracket . Integer RBracket

    Integer         shift and go to state 39


state 14

    (41) Parameter -> type . Identifier

    Identifier      shift and go to state 40


state 15

    (7) function -> type Identifier LParen Parameter . RParen LBrace block RBrace
    (42) Parameter -> Parameter . Comma Parameter

    RParen          shift and go to state 41
    Comma           shift and go to state 42


state 16

    (43) Parameter -> empty .

    RParen          reduce using rule 43 (Parameter -> empty .)
    Comma           reduce using rule 43 (Parameter -> empty .)


state 17

    (64) assignment -> Identifier . Assign expression
    (63) arr_ref -> Identifier . arr_idx_list
    (37) postfix -> Identifier . LParen call_para RParen
    (84) primary -> Identifier .
    (61) arr_idx_list -> . LBracket expression RBracket arr_idx_list
    (62) arr_idx_list -> . LBracket expression RBracket

    Assign          shift and go to state 43
    LParen          shift and go to state 45
    Mul             reduce using rule 84 (primary -> Identifier .)
    Div             reduce using rule 84 (primary -> Identifier .)
    Mod             reduce using rule 84 (primary -> Identifier .)
    Plus            reduce using rule 84 (primary -> Identifier .)
    Minus           reduce using rule 84 (primary -> Identifier .)
    Less            reduce using rule 84 (primary -> Identifier .)
    Greater         reduce using rule 84 (primary -> Identifier .)
    LessEqual       reduce using rule 84 (primary -> Identifier .)
    GreaterEqual    reduce using rule 84 (primary -> Identifier .)
    NotEqual        reduce using rule 84 (primary -> Identifier .)
    Equal           reduce using rule 84 (primary -> Identifier .)
    BitAnd          reduce using rule 84 (primary -> Identifier .)
    Xor             reduce using rule 84 (primary -> Identifier .)
    BitOr           reduce using rule 84 (primary -> Identifier .)
    And             reduce using rule 84 (primary -> Identifier .)
    Question        reduce using rule 84 (primary -> Identifier .)
    Or              reduce using rule 84 (primary -> Identifier .)
    Semi            reduce using rule 84 (primary -> Identifier .)
    RParen          reduce using rule 84 (primary -> Identifier .)
    Comma           reduce using rule 84 (primary -> Identifier .)
    RBracket        reduce using rule 84 (primary -> Identifier .)
    Colon           reduce using rule 84 (primary -> Identifier .)
    LBracket        shift and go to state 46

    arr_idx_list                   shift and go to state 44

state 18

    (33) declaration -> type Identifier Assign expression .

    Semi            reduce using rule 33 (declaration -> type Identifier Assign expression .)


state 19

    (44) expression -> assignment .

    Semi            reduce using rule 44 (expression -> assignment .)
    RParen          reduce using rule 44 (expression -> assignment .)
    Comma           reduce using rule 44 (expression -> assignment .)
    RBracket        reduce using rule 44 (expression -> assignment .)
    Colon           reduce using rule 44 (expression -> assignment .)


state 20

    (45) assignment -> conditional .

    Semi            reduce using rule 45 (assignment -> conditional .)
    RParen          reduce using rule 45 (assignment -> conditional .)
    Comma           reduce using rule 45 (assignment -> conditional .)
    RBracket        reduce using rule 45 (assignment -> conditional .)
    Colon           reduce using rule 45 (assignment -> conditional .)


state 21

    (65) assignment -> arr_ref . Assign expression
    (86) primary -> arr_ref .

    Assign          shift and go to state 47
    Mul             reduce using rule 86 (primary -> arr_ref .)
    Div             reduce using rule 86 (primary -> arr_ref .)
    Mod             reduce using rule 86 (primary -> arr_ref .)
    Plus            reduce using rule 86 (primary -> arr_ref .)
    Minus           reduce using rule 86 (primary -> arr_ref .)
    Less            reduce using rule 86 (primary -> arr_ref .)
    Greater         reduce using rule 86 (primary -> arr_ref .)
    LessEqual       reduce using rule 86 (primary -> arr_ref .)
    GreaterEqual    reduce using rule 86 (primary -> arr_ref .)
    NotEqual        reduce using rule 86 (primary -> arr_ref .)
    Equal           reduce using rule 86 (primary -> arr_ref .)
    BitAnd          reduce using rule 86 (primary -> arr_ref .)
    Xor             reduce using rule 86 (primary -> arr_ref .)
    BitOr           reduce using rule 86 (primary -> arr_ref .)
    And             reduce using rule 86 (primary -> arr_ref .)
    Question        reduce using rule 86 (primary -> arr_ref .)
    Or              reduce using rule 86 (primary -> arr_ref .)
    Semi            reduce using rule 86 (primary -> arr_ref .)
    RParen          reduce using rule 86 (primary -> arr_ref .)
    Comma           reduce using rule 86 (primary -> arr_ref .)
    RBracket        reduce using rule 86 (primary -> arr_ref .)
    Colon           reduce using rule 86 (primary -> arr_ref .)


state 22

    (46) conditional -> logical_or .
    (82) conditional -> logical_or . Question expression Colon conditional
    (66) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 46 (conditional -> logical_or .)
    RParen          reduce using rule 46 (conditional -> logical_or .)
    Comma           reduce using rule 46 (conditional -> logical_or .)
    RBracket        reduce using rule 46 (conditional -> logical_or .)
    Colon           reduce using rule 46 (conditional -> logical_or .)
    Question        shift and go to state 48
    Or              shift and go to state 49


state 23

    (47) logical_or -> logical_and .
    (67) logical_and -> logical_and . And bit_or

    Question        reduce using rule 47 (logical_or -> logical_and .)
    Or              reduce using rule 47 (logical_or -> logical_and .)
    Semi            reduce using rule 47 (logical_or -> logical_and .)
    RParen          reduce using rule 47 (logical_or -> logical_and .)
    Comma           reduce using rule 47 (logical_or -> logical_and .)
    RBracket        reduce using rule 47 (logical_or -> logical_and .)
    Colon           reduce using rule 47 (logical_or -> logical_and .)
    And             shift and go to state 50


state 24

    (48) logical_and -> bit_or .
    (68) bit_or -> bit_or . BitOr xor

    And             reduce using rule 48 (logical_and -> bit_or .)
    Question        reduce using rule 48 (logical_and -> bit_or .)
    Or              reduce using rule 48 (logical_and -> bit_or .)
    Semi            reduce using rule 48 (logical_and -> bit_or .)
    RParen          reduce using rule 48 (logical_and -> bit_or .)
    Comma           reduce using rule 48 (logical_and -> bit_or .)
    RBracket        reduce using rule 48 (logical_and -> bit_or .)
    Colon           reduce using rule 48 (logical_and -> bit_or .)
    BitOr           shift and go to state 51


state 25

    (49) bit_or -> xor .
    (69) xor -> xor . Xor bit_and

    BitOr           reduce using rule 49 (bit_or -> xor .)
    And             reduce using rule 49 (bit_or -> xor .)
    Question        reduce using rule 49 (bit_or -> xor .)
    Or              reduce using rule 49 (bit_or -> xor .)
    Semi            reduce using rule 49 (bit_or -> xor .)
    RParen          reduce using rule 49 (bit_or -> xor .)
    Comma           reduce using rule 49 (bit_or -> xor .)
    RBracket        reduce using rule 49 (bit_or -> xor .)
    Colon           reduce using rule 49 (bit_or -> xor .)
    Xor             shift and go to state 52


state 26

    (50) xor -> bit_and .
    (70) bit_and -> bit_and . BitAnd equality

    Xor             reduce using rule 50 (xor -> bit_and .)
    BitOr           reduce using rule 50 (xor -> bit_and .)
    And             reduce using rule 50 (xor -> bit_and .)
    Question        reduce using rule 50 (xor -> bit_and .)
    Or              reduce using rule 50 (xor -> bit_and .)
    Semi            reduce using rule 50 (xor -> bit_and .)
    RParen          reduce using rule 50 (xor -> bit_and .)
    Comma           reduce using rule 50 (xor -> bit_and .)
    RBracket        reduce using rule 50 (xor -> bit_and .)
    Colon           reduce using rule 50 (xor -> bit_and .)
    BitAnd          shift and go to state 53


state 27

    (51) bit_and -> equality .
    (71) equality -> equality . NotEqual relational
    (72) equality -> equality . Equal relational

    BitAnd          reduce using rule 51 (bit_and -> equality .)
    Xor             reduce using rule 51 (bit_and -> equality .)
    BitOr           reduce using rule 51 (bit_and -> equality .)
    And             reduce using rule 51 (bit_and -> equality .)
    Question        reduce using rule 51 (bit_and -> equality .)
    Or              reduce using rule 51 (bit_and -> equality .)
    Semi            reduce using rule 51 (bit_and -> equality .)
    RParen          reduce using rule 51 (bit_and -> equality .)
    Comma           reduce using rule 51 (bit_and -> equality .)
    RBracket        reduce using rule 51 (bit_and -> equality .)
    Colon           reduce using rule 51 (bit_and -> equality .)
    NotEqual        shift and go to state 54
    Equal           shift and go to state 55


state 28

    (52) equality -> relational .
    (73) relational -> relational . Less additive
    (74) relational -> relational . Greater additive
    (75) relational -> relational . LessEqual additive
    (76) relational -> relational . GreaterEqual additive

    NotEqual        reduce using rule 52 (equality -> relational .)
    Equal           reduce using rule 52 (equality -> relational .)
    BitAnd          reduce using rule 52 (equality -> relational .)
    Xor             reduce using rule 52 (equality -> relational .)
    BitOr           reduce using rule 52 (equality -> relational .)
    And             reduce using rule 52 (equality -> relational .)
    Question        reduce using rule 52 (equality -> relational .)
    Or              reduce using rule 52 (equality -> relational .)
    Semi            reduce using rule 52 (equality -> relational .)
    RParen          reduce using rule 52 (equality -> relational .)
    Comma           reduce using rule 52 (equality -> relational .)
    RBracket        reduce using rule 52 (equality -> relational .)
    Colon           reduce using rule 52 (equality -> relational .)
    Less            shift and go to state 56
    Greater         shift and go to state 57
    LessEqual       shift and go to state 58
    GreaterEqual    shift and go to state 59


state 29

    (53) relational -> additive .
    (77) additive -> additive . Plus multiplicative
    (78) additive -> additive . Minus multiplicative

    Less            reduce using rule 53 (relational -> additive .)
    Greater         reduce using rule 53 (relational -> additive .)
    LessEqual       reduce using rule 53 (relational -> additive .)
    GreaterEqual    reduce using rule 53 (relational -> additive .)
    NotEqual        reduce using rule 53 (relational -> additive .)
    Equal           reduce using rule 53 (relational -> additive .)
    BitAnd          reduce using rule 53 (relational -> additive .)
    Xor             reduce using rule 53 (relational -> additive .)
    BitOr           reduce using rule 53 (relational -> additive .)
    And             reduce using rule 53 (relational -> additive .)
    Question        reduce using rule 53 (relational -> additive .)
    Or              reduce using rule 53 (relational -> additive .)
    Semi            reduce using rule 53 (relational -> additive .)
    RParen          reduce using rule 53 (relational -> additive .)
    Comma           reduce using rule 53 (relational -> additive .)
    RBracket        reduce using rule 53 (relational -> additive .)
    Colon           reduce using rule 53 (relational -> additive .)
    Plus            shift and go to state 60
    Minus           shift and go to state 61


state 30

    (54) additive -> multiplicative .
    (79) multiplicative -> multiplicative . Mul unary
    (80) multiplicative -> multiplicative . Div unary
    (81) multiplicative -> multiplicative . Mod unary

    Plus            reduce using rule 54 (additive -> multiplicative .)
    Minus           reduce using rule 54 (additive -> multiplicative .)
    Less            reduce using rule 54 (additive -> multiplicative .)
    Greater         reduce using rule 54 (additive -> multiplicative .)
    LessEqual       reduce using rule 54 (additive -> multiplicative .)
    GreaterEqual    reduce using rule 54 (additive -> multiplicative .)
    NotEqual        reduce using rule 54 (additive -> multiplicative .)
    Equal           reduce using rule 54 (additive -> multiplicative .)
    BitAnd          reduce using rule 54 (additive -> multiplicative .)
    Xor             reduce using rule 54 (additive -> multiplicative .)
    BitOr           reduce using rule 54 (additive -> multiplicative .)
    And             reduce using rule 54 (additive -> multiplicative .)
    Question        reduce using rule 54 (additive -> multiplicative .)
    Or              reduce using rule 54 (additive -> multiplicative .)
    Semi            reduce using rule 54 (additive -> multiplicative .)
    RParen          reduce using rule 54 (additive -> multiplicative .)
    Comma           reduce using rule 54 (additive -> multiplicative .)
    RBracket        reduce using rule 54 (additive -> multiplicative .)
    Colon           reduce using rule 54 (additive -> multiplicative .)
    Mul             shift and go to state 62
    Div             shift and go to state 63
    Mod             shift and go to state 64


state 31

    (58) unary -> Minus . unary
    (56) unary -> . postfix
    (58) unary -> . Minus unary
    (59) unary -> . BitNot unary
    (60) unary -> . Not unary
    (37) postfix -> . Identifier LParen call_para RParen
    (57) postfix -> . primary
    (83) primary -> . Integer
    (84) primary -> . Identifier
    (85) primary -> . LParen expression RParen
    (86) primary -> . arr_ref
    (63) arr_ref -> . Identifier arr_idx_list
